--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -38,6 +39,10 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.1'
+
+    //결제 api 관련 추가
+    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
 }
 
 tasks.named('test') {
